[#267] use zulu openjdk 12